Add navigation links and connect all pages

--- a/progress.html
+++ b/progress.html
@@ -1,3 +1,11 @@
+<nav>
+  <ul>
+    <li><a href="index.html">🏠 Home</a></li>
+    <li><a href="track.html">📌 Track</a></li>
+    <li><a href="progress.html">📈 Progress</a></li>
+  </ul>
+</nav>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
