--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | Study Tracker</title>
-  <link rel="stylesheet" href="css/style.css"/>
+  <meta charset="UTF-8">
+  <title>My Study Tracker - Home</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome Preeti 👩‍💻</h1>
-    <p>Track your progress, mood, and LeetCode goals daily!</p>
-    <nav>
-      <a href="track.html">Track</a>
-      <a href="progress.html">Progress</a>
-    </nav>
-  </div>
+  <h1>Welcome to My Study Tracker</h1>
+
+  <nav>
+    <ul>
+      <li><a href="track.html">📌 Track</a></li>
+      <li><a href="progress.html">📈 Progress</a></li>
+    </ul>
+  </nav>
+
+  <p>This is your personalized study and progress tracking platform. Keep growing!</p>
 </body>
 </html>
